--- a/InplayBet.Web/Views/Home/Index.cshtml
+++ b/InplayBet.Web/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Index</h2>
+@{Html.RenderPartial("_MainBanner");}
+<h2>Home</h2>
