--- a/InplayBet.Web/Views/Home/Index.cshtml
+++ b/InplayBet.Web/Views/Home/Index.cshtml
@@ -3,4 +3,244 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @{Html.RenderPartial("_MainBanner");}
-<h2>Home</h2>
+<div class="main-container">
+    <div class="container">
+        <h1 class="heading">Welcome to Inplay<span class="grn-bg">20</span><span class="thin">.com</span></h1>
+        <p class="home">Welcome to our £20-£1000 challenge system. This website is the first of its kind and allows you to track your inplay £20-£1000 challenges. It also allows you view follower other members challenges and see a list of latest inplay bets, in realtime format.</p>
+        <p class="home">Are you good enough to complete the £20-£1000 challenge, or do you want to follow others and pick up some great tips for your own inplay betting? Our system allows you to keep an eye on people who can make profit and shows how many challenges have been won and how many have been lost.</p>
+        <p class="home">Please note, this website is not offering any cash prizes and is to be used in conjunction with an inplay betting account. Any betting that occurs from using our website is done at the users own risk.</p>
+        <p></p>
+        <div class="heading-bg">
+            <h2>leaderboard</h2>
+        </div>
+        <ul class="leadbroad-block">
+            <li>
+                <div class="position">1st</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="position">2nd</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="last">
+                <div class="position">3rd</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="position">4th</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="position">5th</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="last">
+                <div class="position">6th</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="position">7th</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="position">8th</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="last">
+                <div class="position">9th</div>
+                <div class="leaderblock">
+                    <h3 class="blue-heading">Member Profile</h3>
+                    <div class="block-top">
+                        <img src="images/leadboard-sh-img.jpg" alt="">
+                        <h4>John Smith</h4>
+                        <p class="member">Member Since: 21-2-15</p>
+                        <p class="join">Ranking: 4</p>
+                        <div class="clear"></div>
+                        <div class="points">
+                            <p class="left">Wins - 7</p>
+                            <p class="right">Losses - 18</p>
+                        </div>
+                        <div class="points">
+                            <p class="left">Won - £7144</p>
+                            <p class="right">Lost - £360</p>
+                        </div>
+                        <div class="points points-botm">
+                            <p class="left">Winning Bets</p>
+                            <p class="right">Profit</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+        <div class="promo-bnr"><img src="images/bet-promo-bnr.jpg" alt=""></div>
+    </div>
+</div>
