--- a/InplayBet.Web/Views/Shared/_BottomNavigation.cshtml
+++ b/InplayBet.Web/Views/Shared/_BottomNavigation.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="footer">
+﻿@{Layout = null;}
+<div class="footer">
     <div class="center">
         <ul>
             <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
