--- a/InplayBet.Web/Views/Shared/_MainBanner.cshtml
+++ b/InplayBet.Web/Views/Shared/_MainBanner.cshtml
@@ -1,1 +1,2 @@
-﻿<div class="main-banner"><div class="outer"><img src='@Url.Content("~/Images/banner.jpg")' alt="" /></div></div>
+﻿@{Layout = null;}
+<div class="main-banner"><div class="outer"><img src='@Url.Content("~/Images/banner.jpg")' alt="" /></div></div>
