--- a/InplayBet.Web/Views/Shared/_TopNavigation.cshtml
+++ b/InplayBet.Web/Views/Shared/_TopNavigation.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="nav-container">
+﻿@{Layout = null;}
+<div class="nav-container">
     <div class="center">
         <ul class="nav">
             <li class="active">@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
