--- a/InplayBet.Web/Views/RegisterUser/Index.cshtml
+++ b/InplayBet.Web/Views/RegisterUser/Index.cshtml
@@ -15,7 +15,7 @@
                 We recommend using Bet365 for your inplay bets, as they offer the most comprehensive inplay listing and the best odds.<br>
                 Please click on the Bet365 below and it will take you Bet365 to create an account -
             </p>
-            <div class="promo-bnr"><img src='@Url.Content("images/bet-promo-bnr.jpg")' alt=""></div>
+            <div class="promo-bnr"><img src='@Url.Content("~/Styles/images/bet-promo-bnr.jpg")' alt=""></div>
             <h4 class="grn-heading">£20-£1000 Challenge Account Registration -</h4>
             <p>If you are waiting to sign up to our £20-£1000 system, please fill in the details below and create your account -</p>
 
