--- a/InplayBet.Web/Views/HowToPlay/Index.cshtml
+++ b/InplayBet.Web/Views/HowToPlay/Index.cshtml
@@ -36,7 +36,7 @@
         <h3 class="sub-heading">Not wanting to complete the challenge</h3>
         <p>If you don't want to play our challenge then our system can be used another way. It allows you to follow other people trying the challenge. This can give you valuable inplay tips and our latest bets page shows all the current inplay bets in order. It provides a great tipping service for your own inplay bets.</p>
         <p>Once you are following a certain member, our system will track their bets for you email you once they place their latest bet. This then allows you to keep up to date on their latest inplay bets.</p>
-        <div class="video"><img src='@Url.Content("~/Images/betting-video.jpg")' alt=""></div>
-        <div class="promo-bnr"><img src='@Url.Content("~/Images/bet-promo-bnr.jpg")' alt="">></div>
+        <div class="video"><img src='@Url.Content("~/Styles/images/betting-video.jpg")' alt=""></div>
+        <div class="promo-bnr"><img src='@Url.Content("~/Styles/images/bet-promo-bnr.jpg")' alt="">></div>
     </div>
 </div>
