--- a/InplayBet.Web/Views/Shared/_Layout.cshtml
+++ b/InplayBet.Web/Views/Shared/_Layout.cshtml
@@ -34,8 +34,8 @@
                 </div>
             </div>
             <div class="header-botm">
-                <div class="logo"><a href="#"><img src='@Url.Content("~/Images/logo.png")' alt="" /></a></div>
-                <div class="header-img"><img src='@Url.Content("~/Images/header-img.png")' alt="" /></div>
+                <div class="logo"><a href="#"><img src='@Url.Content("~/Styles/images/logo.png")' alt="" /></a></div>
+                <div class="header-img"><img src='@Url.Content("~/Styles/images/header-img.png")' alt="" /></div>
             </div>
         </div>
     </div>
